--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <!-- Letter Screen -->
     <div id="letter-container">
       <div class="letter-window">
-        <h1 id="letter-title">Will you be my Valentine?</h1>
+        <h1 id="letter-title">I LOVE YOU, SARJOJ ♡
+          <span id="small-letter">Would you accept my proposal? Pleaseee!!!💌</span>
+        </h1>
 
         <img src="cat_heart.gif" class="cat" id="letter-cat" />
 
@@ -37,7 +39,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Valentine Date:</strong> Meow Restaurant at 7pm. Dress fancy!
+          <strong>Meow BoBo.</strong> I Knew you would accept my Love!! 
         </p>
       </div>
     </div>
