Initial Valentine project

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <!-- Letter Screen -->
     <div id="letter-container">
       <div class="letter-window">
-        <h1 id="letter-title">I LOVE YOU, SARJOJ ♡
-          <span id="small-letter">Would you accept my proposal? Pleaseee!!!💌</span>
+        <h1 id="letter-title">I LOVE YOU, SARJOJ 💖
+          <span id="small-letter">Would you accept my proposal? Pleaseee!!!</span>
         </h1>
 
         <img src="cat_heart.gif" class="cat" id="letter-cat" />
@@ -39,7 +39,8 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Meow BoBo.</strong> I Knew you would accept my Love!! 
+          <strong>Meow BoBo.</strong> I Knew you would accept my Love!! <br>
+          💖I LOVE YOUR MORE AND I MISS YOU BOBO.💖
         </p>
       </div>
     </div>
