Updated index.html with latest changes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <p id="final-text" class="final-text" style="display: none">
           <strong>Meow BoBo.</strong> I Knew you would accept my Love!! <br>
-          💖I LOVE YOUR MORE AND I MISS YOU BOBO.💖
+          💖I LOVE YOU MORE AND I MISS YOU BOBO.💖
         </p>
       </div>
     </div>
